# learning_fastapi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
api/: .env  main.py  oath2.py  schemas.py  send_email.py  utils.py
api/routes/: auth.py  users.py
api/templates/: email.html
legacy/: main.py
python_backend_book/: app.py  config.yml  database.py  db_update.sh  models.py  pyproject.toml  schemas.py
python_backend_book/routes/follow/: crud.py
python_backend_book/routes/tweet/: crud.py  router.py  schema.py
python_backend_book/routes/user/: router.py  schema.py
static/: styles.css  styles.js
templates/: index.html
