[tool.poetry]
name = "learning_fastapi"
version = "0.1.0"
description = ""
authors = ["Jerry Kim <jaeyeol2931@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.9.1"}
python-dotenv = "^0.20.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}
uvicorn = {extras = ["standard"], version = "^0.18.2"}
fastapi = "^0.79.0"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
